hphp/test/zend/bad/bug36071.php
<?php
$a = clone 0;
$a[0]->b = 0;
?>