hphp/test/zend/bad/bug36071.php.exp
HipHop Fatal error: __clone method called on non-object in %sbug36071.php on line 2